# hallucination-dataset-generation

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_tests.sh
data/processed/: README.md
data/raw/: README.md
scripts/: collect_dataset.py  dspy_prompt_optimizer.py  evaluate_dataset.py  make_easy_dataset.py
src/hallucination_creation/: __init__.py  agent.py  claim_generator.py  domains.py  evaluator.py  pipeline.py  retriever.py  simple_evaluator.py  writer.py
src/hallucination_creation/optimizer/: __init__.py  constants.py  io.py  metrics.py  optimize.py  programs.py
tests/: test_pipeline.py
